welcome.lessons.welcome.methods.picture.PictureMono2.scala.error
PictureMono2:64: error: expected class or object definition
faireMotif(); 
^PictureMono2:66: error: Unmatched closing brace '}' ignored here
}
^